terraform/networking.tf
resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true


  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-vpc"
    }
  )
}


resource "aws_internet_gateway" "main" {

  vpc_id = aws_vpc.main.id


  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-igw"
    }
  )
}


resource "aws_subnet" "public" {

  count = length(var.public_subnets)


  vpc_id = aws_vpc.main.id


  cidr_block = var.public_subnets[count.index]


  availability_zone = var.availability_zones[count.index]


  map_public_ip_on_launch = true


  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-public-${count.index + 1}"

      "kubernetes.io/role/elb" = "1"
    }
  )
}


resource "aws_subnet" "private" {

  count = length(var.private_subnets)


  vpc_id = aws_vpc.main.id


  cidr_block = var.private_subnets[count.index]


  availability_zone = var.availability_zones[count.index]


  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-private-${count.index + 1}"

      "kubernetes.io/role/internal-elb" = "1"
    }
  )
}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id
  }


  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-public-rt"
    }
  )
}


resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id


  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-private-rt"
    }
  )
}



resource "aws_route_table_association" "public" {

  count = length(var.public_subnets)


  subnet_id = aws_subnet.public[count.index].id


  route_table_id = aws_route_table.public.id
}


resource "aws_route_table_association" "private" {

  count = length(var.private_subnets)


  subnet_id = aws_subnet.private[count.index].id


  route_table_id = aws_route_table.private.id
}

resource "aws_eip" "nat" {

  domain = "vpc"


  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-nat-eip"
    }
  )
}



resource "aws_nat_gateway" "main" {

  allocation_id = aws_eip.nat.id


  subnet_id = aws_subnet.public[0].id


  tags = merge(
    local.common_tags,
    {
      Name = "${local.project_name}-nat"
    }
  )


  depends_on = [
    aws_internet_gateway.main
  ]
}



resource "aws_route" "private_nat" {

  route_table_id = aws_route_table.private.id


  destination_cidr_block = "0.0.0.0/0"


  nat_gateway_id = aws_nat_gateway.main.id
}
